[package]
name = "paynow"
version = "0.1.0"
authors = ["sabelo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_urlencoded = "0.6.1"
sha2 = "0.8.0"
hyper = "0.13.1"
reqwest = "0.10.1"
