[package]
name = "paynow"
version = "0.1.0"
authors = ["sabelo.n@yandex.com", "Saziwe P.B.C"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_urlencoded = "0.6.1"
hyper = "0.13.1"
reqwest = "0.10.1"
urlencoding = "1.0.0"
url = "2.1.1"
sha2 = "0.8.1"
rusty-money = "0.3.4"